--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -4,6 +4,7 @@
   --bg-primary: #dbdbdb;
   --bg-primary-rgb: 219, 219, 219;
   --bg-secondary: #f5f5f5;
+  --bg-secondary-rgb: 245, 245, 245;
   --text-primary: #000000;
   --text-secondary: #666666;
   --accent-color: #4981bd;
@@ -16,6 +17,7 @@
   --bg-primary: #121212;
   --bg-primary-rgb: 18, 18, 18;
   --bg-secondary: #1e1e1e;
+  --bg-secondary-rgb: 30, 30, 30;
   --text-primary: #ffffff;
   --text-secondary: #aaaaaa;
   --accent-color: #4fd1c7;
